--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ Last Update: April 26th, 2024 -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="style.css" />
-    <link rel="shortcut icon" href="https://www.flaticon.com/free-icon/owl_3940410?term=owl&page=1&position=46&origin=search&related_id=3940410" type="image/x-icon">
+    <link rel="icon" href="https://imgur.com/cf1lCfc.png">
     <title>Guess My Number!</title>
   </head>
   <body>
